--- a/python_modules/dagster-graphql/tox.ini
+++ b/python_modules/dagster-graphql/tox.ini
@@ -8,7 +8,10 @@ deps =
   -e ../../examples
   -e ../libraries/dagster-cron
   -r ./dev-requirements.txt
+usedevelop = true
+whitelist_externals = /bin/bash
 commands =
+  /bin/bash -c '! pip list --exclude-editable | grep -e dagster -e dagit'
   coverage erase
   pytest -vv --junitxml=dagster_graphql_test_results.xml --cov=dagster_graphql --cov-append --cov-report=
   coverage report --omit='.tox/*,**/test_*.py' --skip-covered
