--- a/python_modules/lakehouse/tox.ini
+++ b/python_modules/lakehouse/tox.ini
@@ -10,7 +10,10 @@ deps =
   -e ../libraries/dagster-pyspark
   -e ../libraries/dagster-snowflake
   -e .
+usedevelop = true
+whitelist_externals = /bin/bash
 commands =
+  /bin/bash -c '! pip list --exclude-editable | grep -e dagster -e dagit'
   coverage erase
   pytest -vv --junitxml=test_results.xml --cov=lakehouse --cov-append --cov-report=
   coverage report --omit='.tox/*,**/test_*.py' --skip-covered
