--- a/python_modules/libraries/dagster-postgres/tox.ini
+++ b/python_modules/libraries/dagster-postgres/tox.ini
@@ -7,7 +7,10 @@ deps =
   -e ../../dagster
   -r ../../dagster/dev-requirements.txt
   -e .
+usedevelop = true
+whitelist_externals = /bin/bash
 commands =
+  /bin/bash -c '! pip list --exclude-editable | grep -e dagster -e dagit'
   coverage erase
   pytest -vv --junitxml=test_results.xml --cov=dagster_postgres --cov-append --cov-report=
   coverage report --omit='.tox/*,**/test_*.py' --skip-covered
