--- a/python_modules/libraries/dagster-snowflake/tox.ini
+++ b/python_modules/libraries/dagster-snowflake/tox.ini
@@ -9,7 +9,10 @@ deps =
   -e ../dagster-pandas
   -r ./dev-requirements.txt
   -e .
+usedevelop = true
+whitelist_externals = /bin/bash
 commands =
+  /bin/bash -c '! pip list --exclude-editable | grep -e dagster -e dagit'
   coverage erase
   pytest -vv --junitxml=test_results.xml --cov=dagster_snowflake --cov-append --cov-report=
   coverage report --omit='.tox/*,**/test_*.py' --skip-covered
