--- a/python_modules/dagit/tox.ini
+++ b/python_modules/dagit/tox.ini
@@ -10,7 +10,10 @@ deps =
   -e ../dagster-graphql
   -e ../libraries/dagster-cron
   -e ../../examples
+usedevelop = true
+whitelist_externals = /bin/bash
 commands =
+  /bin/bash -c '! pip list --exclude-editable | grep -e dagster -e dagit'
   coverage erase
   pytest -v --junitxml=dagit_test_results.xml --cov=dagit --cov-append --cov-report=
   coverage report --omit='.tox/*,**/test_*.py' --skip-covered
