--- a/python_modules/libraries/dagster-gcp/tox.ini
+++ b/python_modules/libraries/dagster-gcp/tox.ini
@@ -9,7 +9,10 @@ deps =
   -r ../../dagster/dev-requirements.txt
   -r ./dev-requirements.txt
   -e .[pyarrow]
+usedevelop = true
+whitelist_externals = /bin/bash
 commands =
+  /bin/bash -c '! pip list --exclude-editable | grep -e dagster -e dagit'
   coverage erase
   pytest -vv --junitxml=test_results.xml --cov=dagster_gcp --cov-append --cov-report=
   coverage report --omit='.tox/*,**/test_*.py' --skip-covered
