--- a/python_modules/automation/tox.ini
+++ b/python_modules/automation/tox.ini
@@ -8,7 +8,10 @@ deps =
   -e ../dagster
   -r ./requirements.txt
   -e .
+whitelist_externals = /bin/bash
 commands =
+  /bin/bash -c 'pip list --exclude-editable | grep -e dagster -e dagit'
+  /bin/bash -c 'pip list --exclude-editable | grep -e dagster -e dagit -c | xargs test 0 -eq'
   coverage erase
   pytest -vv --junitxml=test_results.xml --cov=automation --cov-append --cov-report=
   coverage report --omit='.tox/*,**/test_*.py' --skip-covered
