--- a/python_modules/dagster-dask/tox.ini
+++ b/python_modules/dagster-dask/tox.ini
@@ -11,7 +11,10 @@ deps =
   -e ../libraries/dagster-aws
   -e ../libraries/dagster-pandas
   -e .
+whitelist_externals = /bin/bash
 commands =
+  /bin/bash -c 'pip list --exclude-editable | grep -e dagster -e dagit'
+  /bin/bash -c 'pip list --exclude-editable | grep -e dagster -e dagit -c | xargs test 0 -eq'
   coverage erase
   pytest -vv --junitxml=test_results.xml --cov=dagster_dask --cov-append --cov-report=
   coverage report --omit='.tox/*,**/test_*.py' --skip-covered
