--- a/python_modules/dagster/tox.ini
+++ b/python_modules/dagster/tox.ini
@@ -8,7 +8,10 @@ deps =
   -e ../../examples
   -e ../libraries/dagster-cron
   -r dev-requirements.txt
+whitelist_externals = /bin/bash
 commands =
+  /bin/bash -c 'pip list --exclude-editable | grep -e dagster -e dagit'
+  /bin/bash -c 'pip list --exclude-editable | grep -e dagster -e dagit -c | xargs test 0 -eq'
   coverage erase
   flake8 . --count --exclude=./.*,dagster/seven/__init__.py --select=E9,F63,F7,F82 --show-source --statistics
   pytest -vv ./dagster_tests --junitxml=test_results.xml --cov=dagster --cov-append --cov-report= {posargs}
@@ -23,7 +26,10 @@ deps =
   -e ../../examples
   -e ../libraries/dagster-cron
   -r dev-requirements.txt
+whitelist_externals = /bin/bash
 commands =
+  /bin/bash -c 'pip list --exclude-editable | grep -e dagster -e dagit'
+  /bin/bash -c 'pip list --exclude-editable | grep -e dagster -e dagit -c | xargs test 0 -eq'
   coverage erase
   pytest --ignore=dagster_tests/py3_tests -vv ./dagster_tests --junitxml=test_results.xml --cov=dagster --cov-append --cov-report= {posargs}
   coverage report --omit='.tox/*,**/test_*.py' --skip-covered
