--- a/examples/tox.ini
+++ b/examples/tox.ini
@@ -22,7 +22,9 @@ deps =
     -e .[full]
 
 usedevelop = true
+whitelist_externals = /bin/bash
 commands =
+  /bin/bash -c '! pip list --exclude-editable | grep -e dagster -e dagit'
   coverage erase
   pytest dagster_examples_tests --ignore dagster_examples_tests/airline_demo_tests --ignore dagster_examples_tests/event_pipeline_demo_tests  -vv --junitxml=test_results.xml --cov=dagster_examples --cov=../python_modules --cov-append --cov-report=
   coverage report --omit='.tox/*,**/test_*.py' --skip-covered
