--- a/python_modules/dagit/tox.ini
+++ b/python_modules/dagit/tox.ini
@@ -6,11 +6,16 @@ passenv = CI_* COVERALLS_REPO_TOKEN BUILDKITE
 deps =
   -r ./dev-requirements.txt
   -e ../dagster
-  -e ../dagstermill
   -e ../dagster-graphql
+  -e ../libraries/dagster-pandas
   -e ../libraries/dagster-cron
+  -e ../dagstermill
   -e ../../examples
+
+usedevelop = true
+whitelist_externals = /bin/bash
 commands =
+  /bin/bash -c '! pip list --exclude-editable | grep -e dagster -e dagit'
   coverage erase
   pytest -v --junitxml=dagit_test_results.xml --cov=dagit --cov-append --cov-report=
   coverage report --omit='.tox/*,**/test_*.py' --skip-covered
