--- a/examples/tox.ini
+++ b/examples/tox.ini
@@ -23,6 +23,7 @@ deps =
 
 usedevelop = true
 commands =
+  pip list | grep -e dagster -e dagit -c
   coverage erase
   pytest dagster_examples_tests --ignore dagster_examples_tests/airline_demo_tests --ignore dagster_examples_tests/event_pipeline_demo_tests  -vv --junitxml=test_results.xml --cov=dagster_examples --cov=../python_modules --cov-append --cov-report=
   coverage report --omit='.tox/*,**/test_*.py' --skip-covered
