--- a/python_modules/lakehouse/tox.ini
+++ b/python_modules/lakehouse/tox.ini
@@ -10,8 +10,10 @@ deps =
   -e ../libraries/dagster-pyspark
   -e ../libraries/dagster-snowflake
   -e .
+whitelist_externals = /bin/bash
 commands =
-  coverage erase
+  /bin/bash -c 'pip list --exclude-editable | grep -e dagster -e dagit'
+  /bin/bash -c 'pip list --exclude-editable | grep -e dagster -e dagit -c | xargs test 0 -eq' erase
   pytest -vv --junitxml=test_results.xml --cov=lakehouse --cov-append --cov-report=
   coverage report --omit='.tox/*,**/test_*.py' --skip-covered
   coverage html --omit='.tox/*,**/test_*.py'
