--- a/python_modules/dagit/tox.ini
+++ b/python_modules/dagit/tox.ini
@@ -10,8 +10,10 @@ deps =
   -e ../dagster-graphql
   -e ../libraries/dagster-cron
   -e ../../examples
+whitelist_externals = /bin/bash
 commands =
-  coverage erase
+  /bin/bash -c 'pip list --exclude-editable | grep -e dagster -e dagit'
+  /bin/bash -c 'pip list --exclude-editable | grep -e dagster -e dagit -c | xargs test 0 -eq' erase
   pytest -v --junitxml=dagit_test_results.xml --cov=dagit --cov-append --cov-report=
   coverage report --omit='.tox/*,**/test_*.py' --skip-covered
   coverage html --omit='.tox/*,**/test_*.py'
