--- a/python_modules/libraries/dagster-dbt/tox.ini
+++ b/python_modules/libraries/dagster-dbt/tox.ini
@@ -7,8 +7,10 @@ deps =
   -e ../../dagster
   -r ../../dagster/dev-requirements.txt
   -e .
+whitelist_externals = /bin/bash
 commands =
-  coverage erase
+  /bin/bash -c 'pip list --exclude-editable | grep -e dagster -e dagit'
+  /bin/bash -c 'pip list --exclude-editable | grep -e dagster -e dagit -c | xargs test 0 -eq' erase
   pytest -vv --junitxml=test_results.xml --cov=dagster_dbt --cov-append --cov-report=
   coverage report --omit='.tox/*,**/test_*.py' --skip-covered
   coverage html --omit='.tox/*,**/test_*.py'
