--- a/python_modules/libraries/dagster-gcp/tox.ini
+++ b/python_modules/libraries/dagster-gcp/tox.ini
@@ -9,8 +9,10 @@ deps =
   -r ../../dagster/dev-requirements.txt
   -r ./dev-requirements.txt
   -e .[pyarrow]
+whitelist_externals = /bin/bash
 commands =
-  coverage erase
+  /bin/bash -c 'pip list --exclude-editable | grep -e dagster -e dagit'
+  /bin/bash -c 'pip list --exclude-editable | grep -e dagster -e dagit -c | xargs test 0 -eq' erase
   pytest -vv --junitxml=test_results.xml --cov=dagster_gcp --cov-append --cov-report=
   coverage report --omit='.tox/*,**/test_*.py' --skip-covered
   coverage html --omit='.tox/*,**/test_*.py'
