platform gate tox.ini package version checks to linux only
Test Plan: bk/azure

Reviewers: alangenfeld

Differential Revision: https://dagster.phacility.com/D1390

--- a/python_modules/dagster-dask/tox.ini
+++ b/python_modules/dagster-dask/tox.ini
@@ -3,6 +3,10 @@ envlist = py37,py36,py35,py27
 
 [testenv]
 passenv = CIRCLECI CIRCLE_* CI_PULL_REQUEST COVERALLS_REPO_TOKEN DASK_ADDRESS AWS_SECRET_ACCESS_KEY AWS_ACCESS_KEY_ID BUILDKITE
+platform =
+  linux: linux
+  osx: darwin
+  win: win32
 deps =
   -r ../dagster/dev-requirements.txt
   -e ../dagster
@@ -14,7 +18,7 @@ deps =
 usedevelop = true
 whitelist_externals = /bin/bash
 commands =
-  /bin/bash -c '! pip list --exclude-editable | grep -e dagster -e dagit'
+  linux,osx: /bin/bash -c '! pip list --exclude-editable | grep -e dagster -e dagit'
   coverage erase
   pytest -vv --junitxml=test_results.xml --cov=dagster_dask --cov-append --cov-report=
   coverage report --omit='.tox/*,**/test_*.py' --skip-covered
