--- a/examples/tox.ini
+++ b/examples/tox.ini
@@ -3,6 +3,10 @@ envlist = py37,py36,py35
 
 [testenv]
 passenv = CI_* COVERALLS_REPO_TOKEN AWS_SECRET_ACCESS_KEY AWS_ACCESS_KEY_ID TOXENV JAVA_HOME POSTGRES_TEST_DB_HOST BUILDKITE
+platform =
+  linux: linux
+  osx: darwin
+  win: win32
 deps =
     -e ../python_modules/dagster
     -r ../python_modules/dagster/dev-requirements.txt
@@ -24,7 +28,7 @@ deps =
 usedevelop = true
 whitelist_externals = /bin/bash
 commands =
-  /bin/bash -c '! pip list --exclude-editable | grep -e dagster -e dagit'
+  linux,osx: /bin/bash -c '! pip list --exclude-editable | grep -e dagster -e dagit'
   coverage erase
   pytest dagster_examples_tests --ignore dagster_examples_tests/airline_demo_tests --ignore dagster_examples_tests/event_pipeline_demo_tests  -vv --junitxml=test_results.xml --cov=dagster_examples --cov=../python_modules --cov-append --cov-report=
   coverage report --omit='.tox/*,**/test_*.py' --skip-covered
