--- a/python_modules/automation/tox.ini
+++ b/python_modules/automation/tox.ini
@@ -3,6 +3,10 @@ envlist = py37,py36,py35,py27
 
 [testenv]
 passenv = CI_PULL_REQUEST COVERALLS_REPO_TOKEN BUILDKITE
+platform =
+  linux: linux
+  osx: darwin
+  win: win32
 deps =
   -r ../dagster/dev-requirements.txt
   -e ../dagster
@@ -11,7 +15,7 @@ deps =
 usedevelop = true
 whitelist_externals = /bin/bash
 commands =
-  /bin/bash -c '! pip list --exclude-editable | grep -e dagster -e dagit'
+  linux,osx: /bin/bash -c '! pip list --exclude-editable | grep -e dagster -e dagit'
   coverage erase
   pytest -vv --junitxml=test_results.xml --cov=automation --cov-append --cov-report=
   coverage report --omit='.tox/*,**/test_*.py' --skip-covered
