--- a/python_modules/dagit/tox.ini
+++ b/python_modules/dagit/tox.ini
@@ -3,6 +3,10 @@ envlist = py37,py36,py35,py27
 
 [testenv]
 passenv = CI_* COVERALLS_REPO_TOKEN BUILDKITE
+platform =
+  linux: linux
+  osx: darwin
+  win: win32
 deps =
   -r ./dev-requirements.txt
   -e ../dagster
@@ -15,7 +19,7 @@ deps =
 usedevelop = true
 whitelist_externals = /bin/bash
 commands =
-  /bin/bash -c '! pip list --exclude-editable | grep -e dagster -e dagit'
+  linux,osx: /bin/bash -c '! pip list --exclude-editable | grep -e dagster -e dagit'
   coverage erase
   pytest -v --junitxml=dagit_test_results.xml --cov=dagit --cov-append --cov-report=
   coverage report --omit='.tox/*,**/test_*.py' --skip-covered
