--- a/python_modules/dagster/tox.ini
+++ b/python_modules/dagster/tox.ini
@@ -3,6 +3,10 @@ envlist = py37,py36,py35,py27
 
 [testenv]
 passenv = CI_* COVERALLS_REPO_TOKEN AWS_SECRET_ACCESS_KEY AWS_ACCESS_KEY_ID BUILDKITE
+platform =
+  linux: linux
+  osx: darwin
+  win: win32
 deps =
   -e .[aws]
   -e ../../examples
@@ -11,7 +15,7 @@ deps =
 usedevelop = true
 whitelist_externals = /bin/bash
 commands =
-  /bin/bash -c '! pip list --exclude-editable | grep -e dagster -e dagit'
+  linux,osx: /bin/bash -c '! pip list --exclude-editable | grep -e dagster -e dagit'
   coverage erase
   flake8 . --count --exclude=./.*,dagster/seven/__init__.py --select=E9,F63,F7,F82 --show-source --statistics
   pytest -vv ./dagster_tests --junitxml=test_results.xml --cov=dagster --cov-append --cov-report= {posargs}
@@ -21,6 +25,10 @@ commands =
 
 [testenv:py27]
 passenv = CI_* COVERALLS_REPO_TOKEN AWS_SECRET_ACCESS_KEY AWS_ACCESS_KEY_ID
+platform =
+  linux: linux
+  osx: darwin
+  win: win32
 deps =
   -e .[aws]
   -e ../../examples
@@ -29,7 +37,7 @@ deps =
 usedevelop = true
 whitelist_externals = /bin/bash
 commands =
-  /bin/bash -c '! pip list --exclude-editable | grep -e dagster -e dagit'
+  linux,osx: /bin/bash -c '! pip list --exclude-editable | grep -e dagster -e dagit'
   coverage erase
   pytest --ignore=dagster_tests/py3_tests -vv ./dagster_tests --junitxml=test_results.xml --cov=dagster --cov-append --cov-report= {posargs}
   coverage report --omit='.tox/*,**/test_*.py' --skip-covered
