--- a/python_modules/libraries/dagster-gcp/tox.ini
+++ b/python_modules/libraries/dagster-gcp/tox.ini
@@ -3,6 +3,10 @@ envlist = py37,py36,py35,py27
 
 [testenv]
 passenv = CI_* COVERALLS_REPO_TOKEN GOOGLE_APPLICATION_CREDENTIALS GCP_PROJECT_ID BUILDKITE
+platform =
+  linux: linux
+  osx: darwin
+  win: win32
 deps =
   -e ../../dagster
   -e ../dagster-pandas
@@ -12,7 +16,7 @@ deps =
 usedevelop = true
 whitelist_externals = /bin/bash
 commands =
-  /bin/bash -c '! pip list --exclude-editable | grep -e dagster -e dagit'
+  linux,osx: /bin/bash -c '! pip list --exclude-editable | grep -e dagster -e dagit'
   coverage erase
   pytest -vv --junitxml=test_results.xml --cov=dagster_gcp --cov-append --cov-report=
   coverage report --omit='.tox/*,**/test_*.py' --skip-covered
